--- a/GestionPeliculas/Pages/CreatePeliculaPage.xaml
+++ b/GestionPeliculas/Pages/CreatePeliculaPage.xaml
@@ -11,7 +11,11 @@
         <Entry x:Name="GeneroEntry" Placeholder="Genero" />
         <Entry x:Name="AnhoEntry" Placeholder="Anho" Keyboard="Numeric" />
         <Entry x:Name="RutaImagenEntry" Placeholder="Ruta imagen (URL)" />
-        <Button Text="Crear" Clicked="OnCrearClicked" />
+        <Editor x:Name="SinopsisEditor" Placeholder="Sinopsis" AutoSize="TextChanges" HeightRequest="100" />
+        <HorizontalStackLayout>
+            <Button Text="Crear" Clicked="OnCrearClicked" />
+            <Button Text="Subir poster" Clicked="OnSubirPosterClicked" />
+        </HorizontalStackLayout>
     </VerticalStackLayout>
 
 </ContentPage>
